<resources>
    <string name="app_name">PHD Eats</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign-In</string>
    <string name="title_activity_select_campus">Select a Campus</string>
    <string name="title_activity_select_restaurant">Select a Restaurant</string>
    <string name="title_activity_restaurant">Restaurant Information</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_submit_review">Submit a Review</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="gSignIn">Sign in as Guest</string>
    <string name="settings">Settings</string>
    <string name="guest">Proceed as Guest</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="incorrect">Invalid Username or Password</string>
    <string name="incorrect2">Passwords Do Not Match</string>
    <string name="incorrect3">Please Enter a Username and Password</string>
    <string name="incorrect4">Please Enter a Valid Email</string>
    <string name="incorrect5">Please Enter a Rating and Description</string>
    <string name="incorrect6">Username Must be Shorter then 10 Characters</string>
    <string name="incorrect7">Review Must be Shorter then 30 Characters</string>
    <string name="network">Network Connection Lost</string>
    <string name="campus">Campus:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="user">Username:</string>
    <string name="rating">Rating:</string>
    <string name="sReview">Submit Review</string>
    <string name="saReview">Submit A Review?</string>
    <string name="reviewF">Submission Failed</string>
    <string name="login">Sign-In</string>
    <string name="loginS">Sign-In Successful</string>
    <string name="remember">Remember Me</string>
    <string name="signup"><u>Sign Up?</u></string>
    <string name="signup2">Sign Up</string>
    <string name="signupS">Sign Up Successful</string>
    <string name="signupF">Sign Up Failed</string>
    <string name="signupF2">This username is Already Taken!</string>
    <string name="email">E-Mail:</string>
    <string name="cpassword">Re-Type Password:</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="Cancel1">Cancel?</string>
    <string name="Cancel2">Review Cancelled</string>
    <string name="CancelS2">Sign-Up Cancelled</string>
    <string name="Confirm1">Submit Review</string>
    <string name="ConfirmS1">Sign Up</string>
    <string name="Confirm2">Confirm</string>
    <string name="check">Are you sure you want to submit the review?</string>
    <string name="check2">Are you sure you want to Sign Up?</string>
    <string name="noContent">No Content to be Displayed</string>
    <string name="signingIn">Signing In</string>
    <string name="signingUp">Signing Up</string>
    <string name="reviewSubmitting">Submitting Review</string>
    <string name="loading">Loading Information</string>
    <string name="wait0">Creating An Account</string>
    <string name="wait1">Confirming Authentication</string>
    <string name="wait2">Loading Campuses</string>
    <string name="wait3">Loading Restaurants</string>
    <string name="wait4">Loading Reviews</string>
    <string name="wait5">Submitting Your Review</string>
    <string name="offline">Starting in Offline Mode</string>
</resources>
