<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/ic_launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignIn">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:layout_alignEnd="@+id/button4" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/editText"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/username"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edit_text"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText3"
        android:maxLines="1"
        android:padding="5dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gSignIn"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/checkBox"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:text="@string/signup"
        android:textColor="@color/blue"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignEnd="@+id/editText3" />

</RelativeLayout>
