<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mycompany.myproject.SignUp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:maxLines="1"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/editText4"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:hint="@string/username"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText2"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText5"
        android:maxLines="1"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:hint="@string/password"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText4"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:maxLines="1"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:hint="@string/cpassword"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup2"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_below="@+id/editText6"
        android:layout_alignParentStart="true" />


</RelativeLayout>
